discussion/kv_engine/161787/161787_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-40314 Make MagmaKVStore local doc keys same as CouchKVStore

TODO commit msg

1) Make Magma use same local doc keys as Couchstore.
2) Move all constants to storage_common.
3) Use those constants everywhere.

Change-Id: Id859fae688cb649c345c251b973a892a753bf751

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2021-09-17 22:09:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-17 22:18:18.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40102/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\kvstore\storage_common\storage_common/local_doc_constants.h(12): error C2374: "vbstateKey": redefinition; multiple initialization ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40102/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12575/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:12:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string vbstateKey = "_local/vbstate";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:13:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string manifestKey = "_local/collections/manifest";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:14:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string openCollectionsKey = "_local/collections/open";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:15:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string openScopesKey = "_local/scopes/open";
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:16:14: error: use of undeclared identifier "std" [clang-diagnostic-error]
static const std::string droppedCollectionsKey = "_local/collections/dropped";
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12575/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:12:14:
error: use of undeclared identifier "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12575/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2217/ : FAILURE

Compile error at [2021-09-17T22:11:45.527Z] ../kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:12:26:
error: redefinition of "vbstateKey"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2217/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14439/ : FAILURE

Compile error at [2021-09-17T22:11:51.988Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14439/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14191/ : FAILURE

Compile error at [2021-09-17T22:11:52.590Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14191/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14949/ : FAILURE

Compile error at [2021-09-17T22:12:21.954Z] ../kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:12:26:
error: redefinition of "vbstateKey"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13332/ : FAILURE

Compile error at [2021-09-17T22:12:40.772Z] ../magma/tools/magma_dump/cbcollect_dump.cc:32:45:
error: use of undeclared identifier "vbstatsKey"; did you mean "vbstateKey"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13332/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22448/ : FAILURE

Compile error at [2021-09-17T22:11:33.863Z] ../kv_engine/engines/ep/src/kvstore/storage_common/storage_common/local_doc_constants.h:12:26:
error: redefinition of "vbstateKey"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22448/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2244/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2244/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34138/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11366/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
